objects/GN_User__c.object
<CustomObject>
    <description>The address fields belong to user home address
This should be the only link between gnuser and salesforce user. salesforce user table should not be accessible any where else in db except this table.</description>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biography__c</fullName>
        <label>Biography</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Blogger__c</fullName>
        <label>Blogger</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_Company_ID__c</fullName>
        <label>Default Company ID</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipName>GN_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Eff_Date__c</fullName>
        <label>Eff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Exp_Date_del__c</fullName>
        <label>Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FaceBookId__c</fullName>
        <label>FaceBookId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FourSquareId__c</fullName>
        <label>FourSquareId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <label>Home Address</label>
        <referenceTo>BLN_Address__c</referenceTo>
        <relationshipLabel>BLN GN Users</relationshipLabel>
        <relationshipName>BLN_GN_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedInId__c</fullName>
        <label>LinkedInId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <label>Prefix</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>Jr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TwitterId__c</fullName>
        <label>TwitterId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Pic__c</fullName>
        <label>User Pic</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GN_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Video__c</fullName>
        <label>Video</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>isSignup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSignup</label>
        <type>Checkbox</type>
    </fields>
    <label>BLN GN User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GNU-{000000}</displayFormat>
        <label>GN User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN GN Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>